--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -1,7 +1,7 @@
 body {
-    background-color: red;
+    display: flex;
+    flex-direction: column;
 }
 
 .form-button {
-    background-color: #F6F6FF;
 }
