--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -1,39 +1,25 @@
-<p id="notice"><%= notice %></p>
+<%= render partial: "shared/nav" %>
 
-<h1>Donations</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Street</th>
-      <th>Detail</th>
-      <th>Zip</th>
-      <th>Phone</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<!--<p id="notice"><%= notice %></p>-->
+<header class="donation-header donation-flex-row-wrap">
+  <h1 class="title donation-flex-row-wrap">Donations</h1>
+  <h1><%= link_to 'New Donation', new_donation_path %></h1>
+</header>
 
-  <tbody>
+<div class="donations donation-flex-column-nowrap">
     <% @donations.each do |donation| %>
-      <tr>
-        <td><%= donation.title %></td>
-        <td><%= donation.description %></td>
-        <td><%= donation.street %></td>
-        <td><%= donation.detail %></td>
-        <td><%= donation.zip %></td>
-        <td><%= donation.phone %></td>
-        <td><%= donation.email %></td>
-        <td><%= link_to 'Show', donation %></td>
-        <td><%= link_to 'Edit', edit_donation_path(donation) %></td>
-        <td><%= link_to 'Destroy', donation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="donation donation-flex-row-wrap">
+        <img class="donation-image" src = "https://www.gannett-cdn.com/-mm-/3b8b0abcb585d9841e5193c3d072eed1e5ce62bc/c=0-30-580-356/local/-/media/2017/10/05/USATODAY/usatsports/glass-jar-full-of-cois-with-donate-written-on-it-charity-donation-philanthropy_large.jpg?width=3200&height=1680&fit=crop">
+        <div class="donation-about donation-flex-column-nowrap">
+          <h2><%= donation.title%></h2>
+          <p><%=donation.description%></p>
+          <div class ="donation-options donation-flex-row-wrap">
+            <%= link_to 'Show', donation %>
+            <%= link_to 'Edit', edit_donation_path(donation) %>
+            <%= link_to 'Destroy', donation, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Donation', new_donation_path %>
+</div>
