--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: donation, local: true) do |form| %>
+<%= form_with(model: donation, local: true, class: "forms") do |form| %>
   <% if donation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(donation.errors.count, "error") %> prohibited this donation from being saved:</h2>
@@ -12,41 +12,41 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.label :title, :class => "label" %>
+    <%= form.text_field :title, :class => "input_field" %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
+    <%= form.label :description, :class => "label" %>
+    <%= form.text_area :description, :class => "input_field" %>
   </div>
 
   <div class="field">
-    <%= form.label :street %>
-    <%= form.text_field :street %>
+    <%= form.label :street, :class => "label" %>
+    <%= form.text_field :street, :class => "input_field" %>
   </div>
 
   <div class="field">
-    <%= form.label :detail %>
-    <%= form.text_field :detail %>
+    <%= form.label :detail, :class => "label" %>
+    <%= form.text_field :detail, :class => "input_field" %>
   </div>
 
   <div class="field">
-    <%= form.label :zip %>
-    <%= form.text_field :zip %>
+    <%= form.label :zip, :class => "label" %>
+    <%= form.text_field :zip, :class => "input_field" %>
   </div>
 
   <div class="field">
-    <%= form.label :phone %>
-    <%= form.text_field :phone %>
+    <%= form.label :phone, :class => "label" %>
+    <%= form.text_field :phone, :class => "input_field" %>
   </div>
 
   <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
+    <%= form.label :email, :class => "label" %>
+    <%= form.text_field :email, :class => "input_field"%>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit :class => "create_donation_button" %>
   </div>
 <% end %>
