--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -22,6 +22,11 @@
   </div>
 
   <div class="field">
+  <%= form.label :image %>
+  <%= form.file_field :image %>
+  </div>
+
+  <div class="field">
     <%= form.label :street, :class => "label" %>
     <%= form.text_field :street, :class => "input_field" %>
   </div>
