--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -10,7 +10,8 @@
 <div class="donations donation-flex-column-nowrap">
     <% @donations.each do |donation| %>
       <div class="donation donation-flex-row-wrap">
-        <img class="donation-image" src = "https://www.gannett-cdn.com/-mm-/3b8b0abcb585d9841e5193c3d072eed1e5ce62bc/c=0-30-580-356/local/-/media/2017/10/05/USATODAY/usatsports/glass-jar-full-of-cois-with-donate-written-on-it-charity-donation-philanthropy_large.jpg?width=3200&height=1680&fit=crop">
+        <%# <img class="donation-image" src = "https://www.gannett-cdn.com/-mm-/3b8b0abcb585d9841e5193c3d072eed1e5ce62bc/c=0-30-580-356/local/-/media/2017/10/05/USATODAY/usatsports/glass-jar-full-of-cois-with-donate-written-on-it-charity-donation-philanthropy_large.jpg?width=3200&height=1680&fit=crop"> %>
+        <%= image_tag(donation.image) %>
         <div class="donation-about donation-flex-column-nowrap">
           <h2><%= donation.title%></h2>
           <p><%=donation.description%></p>
