--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -11,7 +11,13 @@
     <% @donations.each do |donation| %>
       <div class="donation donation-flex-row-wrap">
         <%# <img class="donation-image" src = "https://www.gannett-cdn.com/-mm-/3b8b0abcb585d9841e5193c3d072eed1e5ce62bc/c=0-30-580-356/local/-/media/2017/10/05/USATODAY/usatsports/glass-jar-full-of-cois-with-donate-written-on-it-charity-donation-philanthropy_large.jpg?width=3200&height=1680&fit=crop"> %>
-        <%= image_tag(donation.image) %>
+        <% if donation.image.attached? %>
+          <%= image_tag(donation.image, :style => "width: 300px") %>
+        <% else %>
+          <div>
+          <%= image_tag("https://image.flaticon.com/icons/svg/149/149092.svg", :style => "width: 300px") %>
+          </div>
+        <% end%>
         <div class="donation-about donation-flex-column-nowrap">
           <h2><%= donation.title%></h2>
           <p><%=donation.description%></p>
