Create controller and view for Sobre

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -10,7 +10,7 @@
     <ul class="nav-buttons-list">
         <%= button_to "HOME", home_index_path, form_class: "form-button-pages", :class => "nav-buttons nav-page-buttons", :method => :get %>
         <span class="separate">&nbsp</span>
-        <%= button_to "SOBRE", home_index_path, form_class: "form-button-pages", :class => "nav-buttons nav-page-buttons", :method => :get %>
+        <%= button_to "SOBRE", about_index_path, form_class: "form-button-pages", :class => "nav-buttons nav-page-buttons", :method => :get %>
 
     </ul>
 
