form css alterations

--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,5 +1,6 @@
 <%= render partial: "shared/nav" %>
-<h1>Crie uma doação</h1>
+
+<h1>Crie sua Doacao</h1>
 
 <%= render 'form', donation: @donation %>
 
