--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -2,38 +2,59 @@
 	--main-back-color: #6c5b7b;
 }
 
-.forms {
-    margin-left: auto;
-    margin-right: auto;
-    background-color: var(--main-back-color);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.field {
-	display: flex;
-	padding: 15px 100px;
-	width: 80%;
+.form {
+	max-width: 500px;
+    font-family: 'Montserrat', sans-serif;
+    padding: 20px 12px 10px 20px;
 }
 
 .label {
 	display: block;
-	margin: 0px 0px 15px 0px;
+	margin: 0 0 15px 0;
+}
+
+.label-text {
+	width: 90px;
+	float: left;
+	padding-top: 8px;
+	padding-right: 5px;
+}
+
+.file-field {
+	
+}
+
+.input-field {
+	width: 80%;
+	box-sizing: border-box;
+	border: 1px solid #C2C2C2;
+	box-shadow: 1px 1px 4px #EBEBEB;
+	border-radius: 3px;
+	padding: 7px;
+	outline: none;
+}
+
+.input-field:focus {
+	border: 1px solid #0C0;
+}
+
+.submit-label {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.submit-button {
+	font-family: 'Montserrat', sans-serif;
+	border: none;
+	padding: 8px 15px 8px 15px;
+	background: #1D84B5;
 	color: #F6F6FF;
-	font-size: 20px;
-	font-family: 'Montserrat', sans-serif;
+	box-shadow: 1px 1px 4px #EBEBEB;
+	border-radius: 3px;
 }
 
-.input_field {
-	width: 70%;
-}
-
-.actions {
-	padding: 5px 100px;
-}
-
-.create_donation_button {
-	font-family: 'Montserrat', sans-serif;
+.submit-button:hover {
+	background: #F6F6FF;
+	color: #1D84B5;
 }
