--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: donation, local: true, class: "forms") do |form| %>
+<%= form_with(model: donation, local: true, class: "form") do |form| %>
   <% if donation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(donation.errors.count, "error") %> prohibited this donation from being saved:</h2>
@@ -11,47 +11,39 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= form.label :title, :class => "label" %>
-    <%= form.text_field :title, :class => "input_field" %>
+  <div class="label">
+    <%= form.label :title, :class => "label-text" %>
+    <%= form.text_field :title, :class => "input-field" %>
   </div>
-
-  <div class="field">
-    <%= form.label :description, :class => "label" %>
-    <%= form.text_area :description, :class => "input_field" %>
+  <div class="label">
+    <%= form.label :image, :class => "label-text" %>
+    <%= form.file_field :image, :class => "file-field" %>
   </div>
-
-  <div class="field">
-  <%= form.label :image %>
-  <%= form.file_field :image %>
+  <div class="label">
+    <%= form.label :street, :class => "label-text" %>
+    <%= form.text_field :street, :class => "input-field" %>
   </div>
-
-  <div class="field">
-    <%= form.label :street, :class => "label" %>
-    <%= form.text_field :street, :class => "input_field" %>
+  <div class="label">
+    <%= form.label :detail, :class => "label-text" %>
+    <%= form.text_field :detail, :class => "input-field" %>
   </div>
-
-  <div class="field">
-    <%= form.label :detail, :class => "label" %>
-    <%= form.text_field :detail, :class => "input_field" %>
+  <div class="label">
+    <%= form.label :zip, :class => "label-text" %>
+    <%= form.text_field :zip, :class => "input-field" %>
   </div>
-
-  <div class="field">
-    <%= form.label :zip, :class => "label" %>
-    <%= form.text_field :zip, :class => "input_field" %>
+  <div class="label">
+    <%= form.label :phone, :class => "label-text" %>
+    <%= form.text_field :phone, :class => "input-field" %>
   </div>
-
-  <div class="field">
-    <%= form.label :phone, :class => "label" %>
-    <%= form.text_field :phone, :class => "input_field" %>
+  <div class="label">
+    <%= form.label :email, :class => "label-text" %>
+    <%= form.text_field :email, :class => "input-field"%>
   </div>
-
-  <div class="field">
-    <%= form.label :email, :class => "label" %>
-    <%= form.text_field :email, :class => "input_field"%>
+  <div class="label">
+    <%= form.label :description, :class => "label-text" %>
+    <%= form.text_area :description, :class => "input-field" %>
   </div>
-
-  <div class="actions">
-    <%= form.submit :class => "create_donation_button" %>
+  <div class="submit-label">
+    <%= form.submit "Submit", :class => "submit-button" %>
   </div>
-<% end %>
+<%end%>
