--- a/app/views/donations/new.html.erb
+++ b/app/views/donations/new.html.erb
@@ -1,7 +1,9 @@
 <%= render partial: "shared/nav" %>
 
-<h1>Crie sua Doacao</h1>
+<h1 class="form-title">Crie sua Doacao</h1>
 
 <%= render 'form', donation: @donation %>
 
-<%= link_to 'Back', donations_path %>
+<div class="div-back-button">
+	<%= link_to 'Back', donations_path , class: "link-back"%>
+</div>
