--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -1,12 +1,14 @@
 :root {
-	--main-back-color: #6c5b7b;
+	--main-color: #1D84B5;
+	--main-hover-color: #34699a;
+	--main-background-color: #F6F6FF;
 }
 
 .form {
 	max-width: 500px;
     font-family: 'Montserrat', sans-serif;
     padding: 20px 12px 10px 20px;
-    border: 3px solid #1D84B5;
+    border: 3px solid var(--main-color);
     border-radius: 5px;
     margin-right: auto;
     margin-left: auto; 
@@ -32,8 +34,9 @@
 
 .input-field {
 	font-family: 'Montserrat', sans-serif;
-	width: 98.5%;
-	max-width: 98.5%;
+	width: 100%;
+	max-width: 100%;
+	min-width: 100%;
 	box-sizing: border-box;
 	border: 1px solid #C2C2C2;
 	border-radius: 3px;
@@ -45,51 +48,75 @@
 	height: 37px;
 }
 
-.input-field:actives {
-}
-
 .input-field:focus {
-	border: 1px solid #1D84B5;
+	border: 1px solid var(--main-color);
     transition: border 1.5s;
 }
 
+.submit-label {
+	align-items: center;
+}
+
 .submit-button {
+	width: 25%;
+	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
-	width: 20%;
 	border: none;
 	padding: 8px 15px 8px 15px;
-	background: #1D84B5;
-	color: #F6F6FF;
+	background: var(--main-color);
+	color: var(--main-background-color);
 	box-shadow: 1px 1px 4px #EBEBEB;
 	border-radius: 20px;
 }
 
 .submit-button:hover {
-	background: #34699a;
+	background: var(--main-hover-color);
+	cursor: pointer;
 }
 
 input[type='file'] {
-  display: none
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
 }
 
 .file-button {
+	width: 25%;
+	font-size: 18px;
 	text-align: center;
 	font-family: 'Montserrat', sans-serif;
 	box-sizing: border-box;
-	width: 50%;
-	border: 1px solid #C2C2C2;
 	box-shadow: 1px 1px 4px #EBEBEB;
 	border-radius: 20px;
 	padding: 7px;
 	outline: none;
-    background-color: #1D84B5;
-	color: #F6F6FF;
+    background-color: var(--main-color);
+	color: var(--main-background-color);
+	float: right;
 }
 
 .file-button:hover {
-  	background-color: #34699a;
+  	background-color: var(--main-hover-color);
+  	cursor: pointer;
 }
 
-.label-buttons {
+.input-file {
+	font-family: 'Montserrat', sans-serif;
+	width: 72%;
+	box-sizing: border-box;
+	border: 1px solid #C2C2C2;
+	border-radius: 3px;
+	padding: 7px;
+	outline: none;
+	border-top-style: none;
+	border-left-style: none;
+	border-right-style: none;
+	height: 37px;
+}
+
+.file-label {
 	display: block;
 }
