--- a/app/views/donations/show.html.erb
+++ b/app/views/donations/show.html.erb
@@ -1,44 +1,36 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @donation.title %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @donation.description %>
-</p>
-
-<p>
-  <strong>Street:</strong>
-  <%= @donation.street %>
-</p>
-
-<p>
-  <strong>Detail:</strong>
-  <%= @donation.detail %>
-</p>
-
-<p>
-  <strong>Zip:</strong>
-  <%= @donation.zip %>
-</p>
-
-<p>
-  <strong>Phone:</strong>
-  <%= @donation.phone %>
-</p>
-
-<p>
-  <strong>Email:</strong>
-  <%= @donation.email %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-</p>
+<%= render partial: "shared/nav" %>
+<head>
+  <link rel="stylesheet" type="text/css" href="show-donation.css">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+</head>
+<div class="container">
+  <div class="photo-container">
+    <%= image_tag(@donation.image, :class => "photo") %>
+  </div>
+  </span>
+  <div class="container-infos">
+    <p class="title-donation">
+      <%= @donation.title %>
+    </p>
 
 
-<%= link_to 'Edit', edit_donation_path(@donation) %> |
-<%= link_to 'Back', donations_path %>
+    <p class="infos-donation">
+      <%= @donation.street %>
+    </p>
+
+    <%# <span class="personal-infos"> %>
+
+      <p class="infos-donation">
+        <%= @donation.phone %>, 
+        <%= @donation.email %>
+      </p>
+    <%# </span> %>
+
+
+    <p class="description">
+      <%= @donation.description %>
+    </p>
+  </div>
+    
+</div>
+
