--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,18 @@ body, html {
     background-color: #EAEBED;
     /* padding: 0; */
 }
+
+.donation-image-form {
+    width:100px;
+    height: 100px;
+    border: solid 3px rgb(37, 37, 37);
+    border-radius: 4px;
+}
+
+.image-container-form {
+    margin-top: 6px;
+    padding: 5px;
+    padding-left: 7px;
+    background-color: rgb(218, 218, 218);
+    border-radius: 7px;
+}
