--- a/app/views/donations/index.html.erb
+++ b/app/views/donations/index.html.erb
@@ -8,8 +8,8 @@
 <div class="donations donation-flex-column-nowrap">
     <% @donations.each do |donation| %>
       <div class="donation donation-flex-row-wrap">
-        <% if donation.image.attached? %>
-          <%= image_tag(donation.image, :style => "width: 300px") %>
+        <% if donation.images.attached? %>
+          <%= image_tag(donation.images[0], :style => "width: 300px") %>
         <% else %>
           <div>
           <%= image_tag("https://image.flaticon.com/icons/svg/149/149092.svg", :style => "width: 300px") %>
