Changes on edit.html.erb

--- a/app/views/donations/edit.html.erb
+++ b/app/views/donations/edit.html.erb
@@ -1,4 +1,6 @@
-<h1>Editing Donation</h1>
+<%= render partial: "shared/nav" %>
+
+<h1 class="edit-title">Editing Donation</h1>
 
 <%= render 'form', donation: @donation %>
 
