--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,11 @@
  *= require_self
  */
 
+:root {
+    --main-color: #1D84B5; 
+    --main-white: #F6F6FF;
+}
+
 body, html {
     margin: 0;
     background-color: #EAEBED;
@@ -33,4 +38,11 @@ body, html {
     padding-left: 7px;
     background-color: rgb(218, 218, 218);
     border-radius: 7px;
+}
+
+.edit-title {
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    color: var(--main-color);
+    margin-bottom: 5px;
 }
