--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -12,22 +12,24 @@ h1 {
 }
 
 .donation-list {
+	width: 100%;
 	margin: 0;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
+	flex-wrap: wrap;
 	font-family: 'Montserrat', sans-serif;
+	justify-content: space-around;
+	margin-top: 2rem;
 }
 
 .donation-each {
-	width: 60%;
-	height: 15rem;
+	width: 20%;
+	height: 23rem;
 	padding: 1rem;
-	margin: 0 1rem 2rem 1rem;
 	border: solid 0.1rem var(--main-color);
 	border-radius: 0.3rem;
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	flex-direction: column;
 	box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
 }
 
@@ -35,35 +37,47 @@ h1 {
 	background-color: #d9d9df;
 }
 
-.donation-image {
-	width: 50%;
+.donation-image-container {
+	width: 100%;
+	height: 30%;
 	display: flex;
-	flex-direction: column;
-	align-items: center;
-	padding: 0;
+	justify-content: center;
 }
 
-.donation-image img {
-	max-height: 80%;
-	max-width: 80%;
-	display: block;
-	margin-top: auto;
-	margin-bottom: auto;
+.donation-image {
+	height: 100%;
+	border-radius: 0.5rem;
+}
+
+.donation-no-image {
+	height: 100%;
 }
 
 .donation-text {
-	width: 50%;
+	height: 70%;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .donation-text h2 {
-	width: 100%;
+	margin-top: 0.7rem;
+	margin-bottom: 0.7rem;
+	height: 10%;
 	text-align: center;
-	height: 2.5rem;
 	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: nowrap;
 }
 
 .donation-text p {
+	margin-top: 0;
+	margin-bottom: 0;
 	width: 100%;
-	height: 8rem;
-	overflow-y: auto;
+	height: 90%;
+	overflow: auto;
+	text-overflow: ellipsis;
+	word-wrap: break-word;
 }
+
