--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,13 @@
 <%= render partial: "/shared/nav" %>
 
-<h1>Donations</h1>
-
 <div class="donation-list">
     <% @donations.each do |donation| %>
       <div class="donation-each">
-      	<div class="donation-image">
+      	<div class="donation-image-container">
 	        <% if donation.images.attached? %>
-	          <%= image_tag(donation.images[0]) %>
+	          <%= image_tag(donation.images[0], :class => "donation-image") %>
 	        <% else %>
-	          <%= image_tag("https://image.flaticon.com/icons/svg/149/149092.svg") %>
+	          <%= image_tag("https://image.flaticon.com/icons/svg/149/149092.svg", :class => "donation-no-image") %>
 	        <% end%>
       	</div>
         <div class="donation-text">
