Changes form placeholder for phone validation

--- a/app/views/donations/_form.html.erb
+++ b/app/views/donations/_form.html.erb
@@ -47,7 +47,7 @@
 
   <div class="label">
     <%= form.label :phone, :class => "label-text" %>
-    <%= form.text_field :phone, :class => "input-field", :placeholder => "Obrigatorio. Formato esperado : (xx)xxxxxxxxx ou (xx)xxxxxxxx" %>
+    <%= form.text_field :phone, :class => "input-field", :placeholder => "Obrigatorio. Formato esperado : 11999999999 ou 11xxxxxxxx" %>
   </div>
 
   <div class="label">
